# boonli_calendar

./: .gcloudignore  .gitignore  README.md  build.sh  deploy_web.sh  local_run.sh  main.py  nginx.conf  pyproject.toml
boonli_calendar/: calendar.py  common.py  crypto.py  encrypt.py
terraform/: api.tf  common.tf  init.tf  main.tf  variables.tf  website.tf
web/: 404.html  index.html
